fixed center align

--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,7 @@ p {
 }
 
 .center {
-	text-align: center;
+	text-align: center !important;
 }
 
 .special_img {
